--- a/_site.yml
+++ b/_site.yml
@@ -4,8 +4,8 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "Journal"
-      href: Journal.html
+    - text: "Portfolio1"
+      href: Portfolio1.html
     - text: "Links"
       href: Links.html
 output_dir: "docs"
